--- a/styles/global.css
+++ b/styles/global.css
@@ -11,10 +11,6 @@ body {
   box-sizing: border-box;
 }
 
-a {
-  color: #0070f3;
-  text-decoration: none;
-}
 
 a:hover {
   text-decoration: underline;
@@ -23,4 +19,13 @@ a:hover {
 img {
   max-width: 100%;
   display: block;
+}
+
+.slick-prev{
+  left: 25px !important;
+  z-index: 1;
+}
+.slick-next{
+  right: 25px !important;
+  z-index: 1;
 }
