--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,6 +1,6 @@
 .Banner4Title{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+  font-size: 30px;
+  line-height: 36px;
   font-weight: 400;
   margin-top: 1.25rem;
   text-align: left;
